# os_robots

./: README.md
os_robots/: CMakeLists.txt  package.xml
os_robots_description/: CMakeLists.txt  package.xml
os_robots_description/launch/: view_model.launch  view_model_1.launch  view_tw_base.launch  view_tw_base_v2.launch
os_robots_description/meshes/: ball.part  ball.stl  base.part  base.stl  link1.part  link1.stl  n@).part  part_1.part  part_1.stl  wheel''s_body.part
os_robots_description/meshes/backup/v1/: n20-43mm-d-shaft-wheel-1.snapshot.9.part  n20-43mm-d-shaft-wheel-1.snapshot.9.stl  part_1.stl  wheel''s_body.part  wheel''s_body.stl
os_robots_description/meshes/backup/v2/: ball.part  ball.stl  n20-43mm-d-shaft-wheel-1.snapshot.9.part  n@).part  n@).stl  part_1.part  part_1.stl  wheel''s_body.part  wheel''s_body.stl
os_robots_description/rviz/: tw_base_urdf.rviz  urdf.rviz  v2_robot_urdf.rviz
os_robots_description/urdf/: 2W_Base_config.json  OS_robots.urdf  robot.urdf  robot.urdf (copy).xacro  robot.urdf.xacro  tw_base.urdf.xacro  tw_base_v1.urdf.xacro  tw_base_v2.gazebo.xacro  tw_base_v2.urdf.xacro  tw_base_v3.gazebo.xacro  tw_base_v3.urdf.xacro  v1_config.json  v2_robot.urdf.xacro
os_robots_description/urdf/backup_urdf_gazebo/: tw_base_v1.gazebo.xacro  tw_base_v1.urdf.xacro
os_robots_gazebo/: CMakeLists.txt  package.xml
os_robots_gazebo/launch/: tw_base_v1_gazebo.launch  tw_base_v2_gazebo.launch  tw_base_v3_gazebo.launch
