<?xml version="1.0"?>
<package format="2">
  <name>os_robots</name>
  <version>0.0.1</version>
  <description>
    ROS packages for the os_robots (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="kamal.rkara@gmail.com">Kamal</author>
  <author>Kamalanathan N</author>
  <maintainer email="kamal.rkara@gmail.com">Kamal</maintainer>
<!--
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
-->
  <buildtool_depend>catkin</buildtool_depend> 
  <exec_depend>os_description</exec_depend>
<!--  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_example</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
-->
  <export><metapackage/></export>
</package>
